--- a/articles/security/fundamentals/index.yml
+++ b/articles/security/fundamentals/index.yml
@@ -1,10 +1,10 @@
 ### YamlMime:Landing
 
-title: Azure Security fundamentals documentation
+title: Azure security fundamentals documentation
 summary: Learn how to secure your cloud solutions on Azure with our best practices and guidance.
 
 metadata:
-  title: Azure Security fundamentals documentation
+  title: Azure security fundamentals documentation
   description: Learn how to secure your cloud solutions on Azure.
   services: security
   ms.service: security
@@ -21,7 +21,7 @@ landingContent:
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card
-  - title: About Azure Security
+  - title: About Azure security
     linkLists:
       - linkListType: overview
         links:
@@ -87,7 +87,7 @@ landingContent:
             url: threat-detection.md
 
   # Card
-  - title: Build your skills
+  - title: Build your security skills
     linkLists:
       - linkListType: learn
         links:
