--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -90,6 +90,8 @@ productDirectory:
       # imageSrc should be square in ratio with no whitespace
       imageSrc: ./retail/media/index/iot-central-retail.svg
       links:
+          - text: Building retail solutions with Azure IoT Central
+            url: ./retail/overview-iot-central-retail-pnp.md
           - text: Create a retail application
             url: ./retail/tutorial-in-store-analytics-create-app-pnp.md
           - text: Create a smart inventory management application
