--- a/articles/iot-central/government/toc.yml
+++ b/articles/iot-central/government/toc.yml
@@ -26,7 +26,7 @@
     - name: Connectivity
       href: ../core/concepts-connectivity-pnp.md?toc=/azure/iot-central/government/toc.json&bc=/azure/iot-central/government/breadcrumb/toc.json
     - name: What are application templates?
-      href: concepts-app-templates.md?toc=/azure/iot-central/government/toc.json&bc=/azure/iot-central/government/breadcrumb/toc.json
+      href: ../core/concepts-app-templates.md?toc=/azure/iot-central/government/toc.json&bc=/azure/iot-central/government/breadcrumb/toc.json
 - name: How-to guides
   items:
 
