--- a/articles/iot-central/healthcare/toc.yml
+++ b/articles/iot-central/healthcare/toc.yml
@@ -17,7 +17,7 @@
     - name: Connectivity
       href: ../core/concepts-connectivity-pnp.md?toc=/azure/iot-central/healthcare/toc.json&bc=/azure/iot-central/healthcare/breadcrumb/toc.json
     - name: What are application templates?
-      href: concepts-app-templates.md?toc=/azure/iot-central/healthcare/toc.json&bc=/azure/iot-central/healthcare/breadcrumb/toc.json
+      href: ../core/concepts-app-templates.md?toc=/azure/iot-central/healthcare/toc.json&bc=/azure/iot-central/healthcare/breadcrumb/toc.json
 - name: How-to guides
   items:
     - name: Create a health data triage dashboard  
