--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -245,6 +245,7 @@
     - name: 'Use Custom Commands with the Speech SDK (Preview)'
       href: quickstart-custom-speech-commands-speech-sdk.md
   - name: How-to guides
+    items:
     - name: 'Fulfill Custom Commands with the Speech SDK'
       href: how-to-custom-speech-commands-fulfill-sdk.md
     - name: 'Add parameter validation to Custom Commands'
