renamed misspelled file name

--- a/articles/terraform/index.yml
+++ b/articles/terraform/index.yml
@@ -33,7 +33,7 @@ landingContent:
           - text: Install and configure Terraform
             url: /azure/virtual-machines/linux/terraform-install-configure?/azure/terraform/toc.json&bc=/azure/bread/toc.json
           - text: Create a Terraform configuration for Azure
-            url: terrafom-quickstart.md
+            url: terraform-create-configuration.md
           - text: Install the Terraform Visual Studio Code extension
             url: terraform-vscode-extension.md
           - text: Create a Terraform base template using Yeoman
