--- a/articles/terraform/toc.yml
+++ b/articles/terraform/toc.yml
@@ -34,7 +34,7 @@
     - name: Infrastructure
       items:
         - name: Create a Terraform VM with managed identities for Azure resources enabled
-          href: terraform-vm-managed-identities-for-azure-resources
+          href: terraform-vm-managed-identities-for-azure-resources.md
         - name: Create a VM cluster with Terraform modules
           href: terraform-create-vm-cluster-module.md
         - name: Create a VM cluster with Terraform and HCL
