--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -92,7 +92,7 @@ productDirectory:
       links:
           - text: Building retail solutions with Azure IoT Central
             url: ./retail/overview-iot-central-retail-pnp.md
-          - text: Create a retail application
+          - text: Create an in-store analytics application
             url: ./retail/tutorial-in-store-analytics-create-app-pnp.md
           - text: Create a smart inventory management application
             url: ./retail/tutorial-iot-central-smart-inventory-management-pnp.md
