--- a/articles/billing/TOC.yml
+++ b/articles/billing/TOC.yml
@@ -67,6 +67,8 @@
         href: billing-prepay-sql-data-warehouse-charges-with-reserved-capacity.md
       - name: Virtual machine
         href: ../virtual-machines/windows/prepay-reserved-vm-instances.md?toc=/azure/billing/TOC.json
+      - name: Azure Storage
+        href: ../storage/blobs/storage-blob-reserved-capacity.md?toc=/azure/billing/TOC.json
       - name: Cosmos DB
         href: ../cosmos-db/cosmos-db-reserved-capacity.md?toc=/azure/billing/TOC.json
       - name: SQL Database
@@ -85,6 +87,8 @@
       items:
       - name: Reserved VM Instances
         href: billing-understand-vm-reservation-charges.md
+      - name: Azure Storage reserved capacity
+        href: billing-understand-storage-charges.md
       - name: Cosmos DB reserved capacity
         href: billing-understand-cosmosdb-reservation-charges.md
       - name: SQL Database reserved capacity
