--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -147,7 +147,7 @@
         href: storage-blob-performance-tiers.md
       - name: Manage the Azure Blob storage lifecycle
         href: storage-lifecycle-management-concepts.md
-    - name: Performance and scaling
+    - name: Performance, scaling, and cost optimization
       items:
       - name: Scalability and performance targets
         href: ../common/storage-scalability-targets.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
@@ -155,6 +155,8 @@
         href: storage-performance-checklist.md
       - name: Latency in Blob storage
         href: storage-blobs-latency.md
+      - name: Azure Storage reserved capacity
+        href: storage-blob-reserved-capacity.md  
     - name: Concurrency
       href: ../common/storage-concurrency.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
     - name: Data migration
