--- a/articles/key-vault/toc.yml
+++ b/articles/key-vault/toc.yml
@@ -108,6 +108,8 @@
       href: managed-identity.md
     - name: Use an access control policy
       href: key-vault-group-permissions-for-apps.md
+  - name: Route key vault notifications with Event Grid
+    href: event-grid-tutorial.md      
   - name: Azure Key Vault logging
     href: key-vault-logging.md
   - name: Access behind firewalls
