--- a/articles/iot-central/index.yml
+++ b/articles/iot-central/index.yml
@@ -141,4 +141,4 @@ additionalContent:
         url: https://docs.microsoft.com/rest/api/azure/
       - title: IoT Central on Microsoft Learn
         summary: Explore the IoT Central in the a free sandbox environment.
-        url: https://docs.microsoft.com/en-us/learn/browse/?products=azure-iot-central
+        url: https://docs.microsoft.com/learn/browse/?products=azure-iot-central
