TOC edits before Don's work was merged

--- a/articles/cognitive-services/Speech-Service/toc.yml
+++ b/articles/cognitive-services/Speech-Service/toc.yml
@@ -26,21 +26,19 @@
     - name: Change speech recognition source language
       href: how-to-specify-source-language.md
     - name: Improve accuracy with Custom Speech
-      href: https://aka.ms/speech/custom-sr-overview
+      href: how-to-custom-speech.md
     - name: Improve accuracy with Phrase Lists
       href: how-to-phrase-lists.md
     - name: Improve accuracy with Tenant Models
-      href: https://aka.ms/speech/tlm-overview
+      href: tutorial-tenant-model.md
     - name: Select a specific microphone input device
       href: how-to-select-audio-input-devices.md
     - name: Use automatic source language detection
       href: how-to-automatic-language-detection.md
     - name: Use compressed audio input formats
       href: how-to-use-codec-compressed-audio-input-streams.md
-    - name: Use continuous recognition
-      href: https://aka.ms/ignite2019/speech/placeholder
     - name: Use speech recognition with Docker containers
-      href: https://aka.ms/speech/sr-containers
+      href: speech-container-howto.md
   - name: Reference
     items:
     - name: Speech SDK APIs
@@ -85,11 +83,15 @@
     - name: Improve output with SSML
       href: speech-synthesis-markup.md
     - name: Improve output with Custom Voices
-      href: https://aka.ms/speech/custom-tts-overview
+      href: how-to-custom-voice.md
     - name: Synthesize speech with Long Audio API
       href: long-audio-api.md
     - name: Use speech synthesis with Docker containers
-      href: https://aka.ms/speech/tts-containers
+      href: speech-container-howto.md
+  - name: Tutorials
+    items:
+    - name: Translate, analyze, and synthesize speech
+      href: ../translator/tutorial-build-flask-app-translation-synthesis.md?toc=%2fazure%2fcognitive-services%2fspeech-service%2ftoc.json&bc=%2fazure%2fcognitive-services%2fspeech-service%2fbreadcrumb%2ftoc.json
   - name: Reference
     items:
     - name: Speech SDK
@@ -121,7 +123,7 @@
       href: quickstarts/intent-recognition.md
   - name: How-to guides
     items:
-    - name: Recognize speech intents with LUIS, C#
+    - name: Recognize speech intents with LUIS
       href: how-to-recognize-intents-from-speech-csharp.md
   - name: Reference
     items:
@@ -143,7 +145,7 @@
         href: releasenotes.md
     - name: LUIS Service
       items:
-      - name: LUIS Developer Resources 
+      - name: LUIS Developer Resources
         href: https://docs.microsoft.com/azure/cognitive-services/luis/developer-reference-resource
 - name: Speech translation
   exanded: false
@@ -160,10 +162,6 @@
       href: quickstarts/translate-speech-to-text-multiple-languages.md
     - name: Translate speech-to-speech
       href: quickstarts/translate-speech-to-speech.md
-  - name: Tutorials
-    items:
-    - name: Build a Flask app to translate and synthesize text, REST
-      href: ../translator/tutorial-build-flask-app-translation-synthesis.md?toc=%2fazure%2fcognitive-services%2fspeech-service%2ftoc.json&bc=%2fazure%2fcognitive-services%2fspeech-service%2fbreadcrumb%2ftoc.json
   - name: Reference
     items:
     - name: Speech SDK
@@ -265,7 +263,7 @@
         href: how-to-custom-speech-train-model.md
       - name: Deploy a custom model
         href: how-to-custom-speech-deploy-model.md
-      - name: "Guide Create human-labeled transcriptions"
+      - name: "Create human-labeled transcriptions"
         href: how-to-custom-speech-human-labeled-transcriptions.md
     - name: 'Tenant Models'
       items:
@@ -299,7 +297,7 @@
         href: record-custom-voice-samples.md
     - name: Audio Content Creation
       items:
-      - name: "How-to: Audio Content Creation"
+      - name: "Get started with Audio Content Creation"
         href: how-to-audio-content-creation.md
     - name: Custom neural voices
       items:
@@ -340,11 +338,11 @@
       - name: Batch transcription & customization REST API
         href: https://westus.cris.ai/swagger/ui/index
       - name: Conversation Transcription REST API
-        href: https://aka.ms/ignite2019/speech/placeholder
+        href: https://signature.centralus.cts.speech.microsoft.com/UI/index.html
       - name: Speech-to-text REST API
-        href: https://aka.ms/ignite2019/speech/placeholder
+        href: rest-speech-to-text.md
       - name: Text-to-speech REST API
-        href: https://aka.ms/ignite2019/speech/placeholder
+        href: rest-text-to-speech.md
       - name: Webhooks REST API
         href: webhooks.md
     - name: Swagger documentation
