--- a/articles/peering-service/TOC.yml
+++ b/articles/peering-service/TOC.yml
@@ -6,7 +6,7 @@
     href: about.md
 - name: Concepts
   items:
-  - name: Location and Partners
+  - name: Location and partners
     href: location-partners.md
   - name: Connection
     href: connection.md
