--- a/articles/peering-service/index.yml
+++ b/articles/peering-service/index.yml
@@ -28,7 +28,7 @@ landingContent:
             url: about.md
       - linkListType: concept
         links:
-          - text: Location and Partners
+          - text: Location and partners
             url: location-partners.md
           - text: Connections
             url: connection.md
