--- a/articles/security/fundamentals/index.yml
+++ b/articles/security/fundamentals/index.yml
@@ -13,7 +13,7 @@ metadata:
   author: TerryLanfear
   ms.author: terrylan
   manager: rkarlin
-  ms.date: 10/25/2019
+  ms.date: 10/28/2019
 
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | whats-new
 
@@ -47,6 +47,20 @@ landingContent:
             url: security-controls.md
 
   # Card
+  - title: Mitigate threats
+    linkLists:
+      - linkListType: overview
+        links:
+          - text: Azure Security Center
+            url: ../../security-center/security-center-intro.md
+      - linkListType: concept
+        links:
+          - text: Management and monitoring
+            url: management-monitoring-overview.md
+          - text: Advanced threat detection
+            url: threat-detection.md
+
+  # Card
   - title: Best practices for securing your cloud solutions
     linkLists:
       - linkListType: concept
@@ -55,7 +69,7 @@ landingContent:
             url: network-best-practices.md
           - text: IaaS workloads
             url: iaas.md
-          - text: Identity management
+          - text: Identity management and access control
             url: identity-management-best-practices.md
           - text: Database security
             url: database-best-practices.md
@@ -63,28 +77,28 @@ landingContent:
             url: paas-deployments.md
           - text: Data security and encryption
             url: data-encryption-best-practices.md
-          - text: Operational
+          - text: Operational security
             url: operational-best-practices.md
 
   # Card
   - title: Protect your Azure resources
     linkLists:
-      - linkListType: overview
-        links:
-          - text: Azure Security Center
-            url: ../../security-center/security-center-intro.md
       - linkListType: concept
         links:
-          - text: Data security and encryption
-            url: encryption-overview.md
+          - text: Encryption at rest
+            url: encryption-atrest.md
+          - text: Data protection
+            url: database-security-overview.md
           - text: Network security
             url: network-overview.md
           - text: Virtual machines security
             url: virtual-machines-overview.md
-          - text: Management and monitoring
-            url: management-monitoring-overview.md
-          - text: Advanced threat detection
-            url: threat-detection.md
+          - text: Identity management security
+            url: identity-management-overview.md
+      - linkListType: learn
+        links:
+          - text: Secure your cloud applications
+            url: https://docs.microsoft.com/learn/paths/secure-your-cloud-apps/
 
   # Card
   - title: Build your security skills
