--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -629,8 +629,10 @@
     items:
     - name: Create and manage storage accounts
       items:
-      - name: Create a storage account for your Data Lake
+      - name: Create a storage account (Data Lake Storage)
         href: ../blobs/data-lake-storage-quickstart-create-account.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+      - name: Create a block blob storage account (Data Lake Storage)
+        href: storage-blob-create-account-block-blob.md
       - name: Manage a storage account
         href: ../common/storage-account-manage.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Manage data with Storage Explorer
