--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -124,12 +124,12 @@
               href: api-management-howto-manage-protocols-ciphers.md
       - name: Customize the developer experience
         items:
-            - name: Access and customize the new developer portal
+            - name: Understand the developer portal
               href: api-management-howto-developer-portal.md
-            - name: Modify page content and layout
-              href: api-management-modify-content-layout.md
-            - name: Customize system pages using templates
-              href: api-management-developer-portal-templates.md
+            - name: Access and customize the developer portal
+              href: api-management-howto-developer-portal-customize.md
+            - name: Automate developer portal deployments
+              href: api-management-howto-developer-portal-automate.md
             - name: Authentication with Azure AD
               href: api-management-howto-aad.md
             - name: Authentication with Azure AD B2C
@@ -140,6 +140,10 @@
               href: api-management-howto-configure-notifications.md
             - name: Enable console OAuth support
               href: api-management-howto-oauth2.md
+            - name: Legacy portal - modify pages and layouts
+              href: api-management-modify-content-layout.md
+            - name: Legacy portal - customize with templates
+              href: api-management-developer-portal-templates.md
       - name: Define policies
         items:
             - name: Set or edit policies
