--- a/articles/postgresql/TOC.yml
+++ b/articles/postgresql/TOC.yml
@@ -253,22 +253,22 @@
     items:
     - name: Create users
       href: howto-hyperscale-create-users.md
-    - name: Scaling
+    - name: Scale
       href: howto-hyperscale-scaling.md
     - name: Manage firewall
       items:
       - name: Azure portal
         href: howto-hyperscale-manage-firewall-using-portal.md
-    - name: Troubleshoot
-      items:
-      - name: Troubleshoot connection errors
-        href: howto-hyperscale-troubleshoot-common-connection-issues.md
+    - name: High availability
+      href: howto-hyperscale-high-availability.md
     - name: Monitor
       items:
       - name: Create alerts on metrics
         href: howto-hyperscale-alert-on-metric.md
-    - name: High availability
-      href: howto-hyperscale-high-availability.md
+    - name: Troubleshoot
+      items:
+      - name: Troubleshoot connection errors
+        href: howto-hyperscale-troubleshoot-common-connection-issues.md
 - name: Reference
   items:
   - name: Azure CLI
