Removed localisation from links

--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -989,7 +989,7 @@
   # - name: Datasets
   #   href: article-template.md
   - name: Forum
-    href: https://social.msdn.microsoft.com/Forums/en-US/home?forum=AzureSQLDataWarehouse
+    href: https://social.msdn.microsoft.com/Forums/home?forum=AzureSQLDataWarehouse
   # - name: Naming Rules
   #   href: article-template.md
   - name: Pricing
