--- a/articles/web-application-firewall/toc.yml
+++ b/articles/web-application-firewall/toc.yml
@@ -44,6 +44,8 @@
       href: ./afds/waf-front-door-custom-rules.md
     - name: Policy settings
       href: ./afds/waf-front-door-policy-settings.md
+    - name: Geo-filtering
+      href: ./afds/waf-front-door-geo-filtering.md
     - name: FAQ
       href: ./afds/waf-faq.md
 - name: How-to guides
@@ -90,6 +92,8 @@
       href: ./afds/waf-front-door-configure-ip-restriction.md
     - name: Configure rate limit - PowerShell
       href: ./afds/waf-front-door-rate-limit-powershell.md
+    - name: Configure a geo-filtering WAF policy
+      href: ./afds/waf-front-door-tutorial-geo-filtering.md
     - name: Monitor and logging
       href: ./afds/waf-front-door-monitor.md
 - name: Troubleshoot
