--- a/articles/container-registry/TOC.yml
+++ b/articles/container-registry/TOC.yml
@@ -129,7 +129,7 @@
         href: ../aks/tutorial-kubernetes-prepare-app.md
       - name: Service Fabric
         href: ../service-fabric/service-fabric-tutorial-create-container-images.md
-  - name: Monitor and log
+  - name: Monitor
     items:
       - name: Diagnostic and audit logs (preview)
         href: container-registry-diagnostics-audit-logs.md   
@@ -137,6 +137,8 @@
     items:
       - name: Detect common issues
         href: container-registry-check-health.md
+      - name: FAQ
+        href: container-registry-faq.md
 - name: Reference
   items:
   - name: Azure CLI
@@ -180,5 +182,3 @@
     href: https://stackoverflow.com/questions/tagged/azure-container-registry
   - name: Videos
     href: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
-  - name: FAQ
-    href: container-registry-faq.md
