use official feature name when covering suggested tags

--- a/articles/cognitive-services/Custom-Vision-Service/index.yml
+++ b/articles/cognitive-services/Custom-Vision-Service/index.yml
@@ -84,7 +84,7 @@ landingContent:
             url: test-your-model.md
           - text: Improve your model
             url: getting-started-improving-your-classifier.md
-          - text: Use suggested tags
+          - text: Use Smart Labeler
             url: suggested-tags.md
 
   - title: Export models
