--- a/articles/virtual-network/toc.yml
+++ b/articles/virtual-network/toc.yml
@@ -39,6 +39,8 @@
     href: security-overview.md
   - name: Routing
     href: virtual-networks-udr-overview.md
+  - name: Service tags 
+    href: service-tags-overview.md
   - name: Service endpoints
     href: virtual-network-service-endpoints-overview.md
   - name: Service endpoint policies
