--- a/articles/active-directory/user-help/toc.yml
+++ b/articles/active-directory/user-help/toc.yml
@@ -68,6 +68,8 @@
     href: my-account-portal-organizations-page.md
   - name: View your privacy-related info
     href: my-account-portal-privacy-page.md
+  - name: View your sign-in activity
+    href: my-account-portal-sign-ins-page.md
 - name: Security info (preview) help
   items:
   - name: Overview
