--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -155,7 +155,7 @@
           href: migration-resources.md
         - name: Migrate an ADFS app to Azure
           href: migrate-adfs-apps-to-azure.md
-        - name: AD FS application activity report
+        - name: Use the AD FS application activity report
           href: migrate-adfs-application-activity.md
       - name: Troubleshoot
         items:
