--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -101,6 +101,10 @@
       href: ../common/storage-use-azcopy-linux.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json 
   - name: Initiate an account failover
     href: ../common/storage-initiate-account-failover.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
+  - name: Troubleshoot
+    items:
+    - name: Troubleshoot latency using Storage Analytics
+      href: ../common/how-to-troubleshoot/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
 - name: Resources
   items:
   - name: Table storage REST APIs
