--- a/articles/api-management/TOC.yml
+++ b/articles/api-management/TOC.yml
@@ -122,15 +122,15 @@
               href: api-management-howto-ca-certificates.md
             - name: Manage protocols and ciphers
               href: api-management-howto-manage-protocols-ciphers.md
-      - name: Customize the developer experience
+      - name: Customize developer experience
         items:
             - name: Understand the developer portal
               href: api-management-howto-developer-portal.md
             - name: Automate developer portal deployments
               href: api-management-howto-developer-portal-automate.md
-            - name: Authentication with Azure AD
+            - name: Authenticate with Azure AD
               href: api-management-howto-aad.md
-            - name: Authentication with Azure AD B2C
+            - name: Authenticate with Azure AD B2C
               href: api-management-howto-aad-b2c.md
             - name: Delegated authentication
               href: api-management-howto-setup-delegation.md
@@ -144,6 +144,28 @@
               href: api-management-modify-content-layout.md
             - name: Legacy portal - customize with templates
               href: api-management-developer-portal-templates.md
+      - name: Legacy portal templates
+        items:
+            - name: Data model reference
+              href: api-management-template-data-model-reference.md
+            - name: Page controls
+              href: api-management-page-controls.md
+            - name: Templates
+              href: api-management-developer-portal-templates-reference.md
+            - name: APIs
+              href: api-management-api-templates.md
+            - name: Products
+              href: api-management-product-templates.md
+            - name: Applications
+              href: api-management-application-templates.md
+            - name: Issues
+              href: api-management-issue-templates.md
+            - name: User profile
+              href: api-management-user-profile-templates.md
+            - name: Pages
+              href: api-management-page-templates.md
+            - name: Template resources
+              href: api-management-template-resources.md
       - name: Define policies
         items:
             - name: Set or edit policies
@@ -172,28 +194,6 @@
               href: api-management-cross-domain-policies.md
             - name: Transformation policies
               href: api-management-transformation-policies.md
-      - name: Template reference
-        items:
-            - name: Templates
-              href: api-management-developer-portal-templates-reference.md
-            - name: APIs
-              href: api-management-api-templates.md
-            - name: Products
-              href: api-management-product-templates.md
-            - name: Applications
-              href: api-management-application-templates.md
-            - name: Issues
-              href: api-management-issue-templates.md
-            - name: User profile
-              href: api-management-user-profile-templates.md
-            - name: Pages
-              href: api-management-page-templates.md
-            - name: Template resources
-              href: api-management-template-resources.md
-      - name: Data model reference
-        href: api-management-template-data-model-reference.md
-      - name: Page controls
-        href: api-management-page-controls.md
       - name: Manage in production
         items:
             - name: Manage groups
