--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -555,10 +555,6 @@
           href: https://github.com/Azure/azure-storage-python
     - name: Compliance offerings
       href: ../common/storage-compliance-offerings.md
-  - name: Troubleshoot
-    items:
-    - name: Troubleshoot latency using Storage Analytics
-      href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
 - name: Data Lake Storage Gen2
   items:
   - name: Switch to Data Lake Storage Gen1 documentation
@@ -677,7 +673,11 @@
           href: ../common/storage-auth-aad-rbac-cli.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       - name: Set file and directory-level permissions
         href: ../blobs/data-lake-storage-how-to-set-permissions-storage-explorer.md
-    - name: Optimize performance
+    - name: Troubleshoot
+      items:
+      - name: Latency issues
+        href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
+        - name: Optimize performance
       href: ../blobs/data-lake-storage-use-power-bi.md?toc=%2fazure%2fstorage%2fblobs%2ftoc.json
       items:
       - name: Overview
