--- a/articles/virtual-desktop/TOC.yml
+++ b/articles/virtual-desktop/TOC.yml
@@ -68,7 +68,7 @@
     href: environment-setup.md
   - name: Bandwidth recommendations for remote sessions
     href: bandwidth-recommendations.md
-  - name: User connection latency
+  - name: Determine user connection latency
     href: connection-latency.md
   - name: Delegated access in Windows Virtual Desktop
     href: delegated-access-virtual-desktop.md
