--- a/articles/active-directory/manage-apps/toc.yml
+++ b/articles/active-directory/manage-apps/toc.yml
@@ -135,6 +135,8 @@
           href: methods-for-assigning-users-and-groups.md
         - name: Assign a user to an app
           href: assign-user-or-group-access-portal.md
+        - name: Create workspaces on My Apps (preview)
+          href: access-panel-workspaces.md
         - name: Use self-service app access
           href: access-panel-manage-self-service-access.md
         - name: Methods for removing a user's access to an app
