fixed path to files to new file names

--- a/articles/application-gateway/index.yml
+++ b/articles/application-gateway/index.yml
@@ -65,16 +65,16 @@ landingContent:
             url: tutorial-autoscale-ps.md
 
 # Card
-  - title: Ingress Controller
+  - title: Ingress Controller for AKS
     linkLists:
       - linkListType: concept
         links:
-          - text: What is Application Gateway Ingress Controller
-            url: application-gateway-ingress-controller-overview.md
-      # - linkListType: tutorial
-      #   links:
-      #     - text: Create an application gateway that improves web application access
-      #       url: tutorial-autoscale-ps.md
+          - text: What is Ingress Controller for AKS
+            url: ingress-controller-overview.md
+      - linkListType: tutorial
+        links:
+          - text: Create an Ingress Controller for AKS 
+            url: ingress-controller-install-new.md
 
 
 # Card
