--- a/articles/search/TOC.yml
+++ b/articles/search/TOC.yml
@@ -195,6 +195,8 @@
       href: search-blob-storage-integration.md
     - name: Set up a blob indexer
       href: search-howto-indexing-azure-blob-storage.md
+    - name: Set up an ADLS Gen2 indexer
+      href: search-howto-index-adls.md
     - name: Index one-to-many blobs
       href: search-howto-index-one-to-many-blobs.md
     - name: Index CSV blobs
