--- a/articles/peering-service/TOC.yml
+++ b/articles/peering-service/TOC.yml
@@ -10,7 +10,7 @@
     href: location-partners.md
   - name: Connection
     href: connection.md
-  - name: Connection Telemetry
+  - name: Connection telemetry
     href: connection-telemetry.md
   - name: Onboarding model
     href: onboarding-model.md
